# clarch

./: .gitignore  CMakeLists.txt  main.cpp
src/: Args.cpp  Args.h  DirectoryReader.cpp  DirectoryReader.h  FileReader.cpp  FileReader.h  FileStats.cpp  FileStats.h  StringUtils.cpp  StringUtils.h
src/filesystem/: DirectoryReader.cpp  DirectoryReader.h  FileReader.cpp  FileReader.h
src/renderers/: JsonRenderer.cpp  JsonRenderer.h  Renderer.h
src/scanners/: Scanner.h
src/scanners/elixir/: ElixirScanner.cpp  ElixirScanner.h
src/stats/: ModuleStats.cpp  ModuleStats.h  ReferenceResolver.cpp  ReferenceResolver.h
src/utility/: StringUtils.cpp  StringUtils.h
